Fix to improve how menu displays on mobile devices.

--- a/UI/css/styles.css
+++ b/UI/css/styles.css
@@ -47,6 +47,10 @@ header {
 }
 .menu-header {
     visibility: hidden;
+    position: absolute;
+    top: 0px;
+    right: 0px;
+    visibility: hidden;
 }
 .menu-header ul li {
     list-style: none;
